Bug 145245 - A relative position other than zero of extrusion of custom shapes is wrongly rendered
Summary: A relative position other than zero of extrusion of custom shapes is wrongly ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-20 21:16 UTC by Regina Henschel
Modified: 2021-10-22 12:51 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Document with shapes in different extrusion positions (12.68 KB, application/vnd.oasis.opendocument.presentation)
2021-10-20 21:16 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-10-20 21:16:08 UTC
Created attachment 175854 [details]
Document with shapes in different extrusion positions

ODF specifies for draw:extrusion-depth, 'The draw:extrusion-depth
attribute specifies the depth of an extrusion. It takes two white space
separated values. The first value specifies the depth of the extrusion
in units, the second value specifies the fraction of the extrusion that
lies before a shape. The second value shall be in the range [0,1].'

The default for the second value is 0. Because LibreOffice has no UI to
change the value, the error becomes only visible, if you create own
custom shapes.

The attached document contains three custom shapes. The left one has as second value 0.0, the center one has value 0.5 and the right one has value 1.0. The shapes are rotated 90deg around the x-axis so that the extrusion becomes visible. The extrusion depth itself is 5cm. The nominal y-coordinate of the shapes is 6cm.

The extrusion rectangle should always have the size w×h=6cm×5cm.
The left|top coordinate of the extrusion rectangle should be 1cm|1cm for the left shape, 9cm|3.5cm for the center shape, and 18cm|6cm for the right shape.

Currently the left shape is OK, the center shape renders no extrusion, and the right shape has the extrusion at wrong position.
Comment 1 Commit Notification 2021-10-21 21:37:25 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ab21caf603ba0a1c95bbc94a29eebe3483d1599

tdf#145245 correct relative position of extrusion

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-10-22 12:51:10 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/264da4cc0b60e75884ff66ab25fd38952cc6020d

tdf#145245 correct relative position of extrusion

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.